--- a/webinar/beauty.css
+++ b/webinar/beauty.css
@@ -64,11 +64,12 @@
   padding-top: 0.6666666666666666em;
   padding-bottom: 0.6666666666666666em;
   padding-left: 1.3333333333333333em;
-  top: 3.2em;
-  right: 0.2em;
+  top: 19rem;
+  right: 0rem;
   border-top-style: none;
   border-bottom-style: none;
   border-left-style: none;
   border-right-style: none;
   background-color: transparent !important;
+  color: black;
 }
