--- a/webinar/beauty.css
+++ b/webinar/beauty.css
@@ -71,5 +71,5 @@
   border-left-style: none;
   border-right-style: none;
   background-color: transparent !important;
-  color: black;
+  color: #2a2a2a;
 }
