--- a/template/casestudy.css
+++ b/template/casestudy.css
@@ -6,7 +6,7 @@
   transition-timing-function: ease;
 }
 
-.body.is--solutions .video_element.is--casestudy.is--2 {
+.body.is--solution .video_element.is--casestudy.is--2 {
   opacity: 1;
 }
 
