--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -3,7 +3,7 @@
   font-size: 14rem;
   font-style: normal;
   font-weight: 400;
-  line-height: calc(20 / 14rem);
+  line-height: 140%;
   margin-bottom: 11rem;
 }
 
@@ -14,4 +14,14 @@
   border: 1px solid #999;
   background: #f6f8fa;
   margin-bottom: 11rem;
+  font-size: 14rem;
+  line-height: 140%;
+}
+
+.is--demo-hero p {
+  color: #000;
+  font-size: 12rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
 }
