--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -25,3 +25,8 @@
   font-weight: 400;
   line-height: 140%;
 }
+
+.is--demo-hero .hs-richtext a {
+  font-weight: 400;
+  text-decoration: underline;
+}
