--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -38,6 +38,7 @@
 .is--demo-hero .hs-button.primary.large {
   display: flex;
   padding: 13rem 26rem;
+  width: 100%;
   justify-content: center;
   align-items: flex-start;
   gap: 10rem;
