--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -16,6 +16,9 @@
   margin-bottom: 11rem;
   font-size: 14rem;
   line-height: 140%;
+  font-weight: 400;
+  font-style: normal;
+  color: #000;
 }
 
 .is--demo-hero .hs-richtext {
