--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -18,6 +18,15 @@ html.w-editor .main-wrapper {
   width: 100%;
   height: 48rem;
   border-radius: 300rem;
+  border-width: 0;
+  font-size: 16rem;
+  padding-left: 24rem;
+  padding-right: 24rem;
+  color: black;
+}
+
+.frontrunner--embed .input {
+  margin: 0px;
 }
 
 #onetrust-consent-sdk {
