--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -15,7 +15,7 @@ html.w-editor .main-wrapper {
 }
 
 .frontrunner--embed .hs-input {
-  width: 100%;
+  width: 100% !important;
   height: 48rem;
   border-radius: 300rem;
   border-width: 0;
