--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -14,6 +14,11 @@ html.w-editor .main-wrapper {
   opacity: 1;
 }
 
+.frontrunner--embed form {
+  display: flex;
+  row-gap: 24rem;
+}
+
 .frontrunner--embed .hs-input {
   width: 100% !important;
   height: 48rem;
