--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -62,6 +62,7 @@ html.w-editor .main-wrapper {
 
 .frontrunner--embed ::marker {
   opacity: 0;
+  color: transparent;
 }
 
 #ot-sdk-btn-floating.ot-floating-button {
