--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -97,6 +97,7 @@ html.w-editor .main-wrapper {
   top: -70em;
   left: 0em !important;
   background-color: transparent !important;
+  display: none !important;
 }
 
 #ot-sdk-btn-floating .ot-floating-button__front {
