--- a/event/beyond.css
+++ b/event/beyond.css
@@ -20,6 +20,7 @@ html.w-editor .main-wrapper {
   color: white;
   border-radius: 88rem;
   border: 1px solid rgba(255, 255, 255, 0.4);
+  font-size: 24rem;
 }
 
 .frontrunner--embed fieldset {
