--- a/event/beyond.css
+++ b/event/beyond.css
@@ -22,6 +22,7 @@ html.w-editor .main-wrapper {
   border: 1px solid rgba(255, 255, 255, 0.4);
   font-size: 24rem;
   font-style: normal;
+  background-color: transparent;
 }
 
 #ot-sdk-btn-floating.ot-floating-button {
