--- a/event/beyond.css
+++ b/event/beyond.css
@@ -28,7 +28,7 @@ html.w-editor .main-wrapper {
   font-style: normal;
   background-color: transparent;
   max-width: none;
-  width: 100%;
+  width: 100% !important;
 }
 
 .frontrunner--embed .input {
