--- a/event/beyond.css
+++ b/event/beyond.css
@@ -44,6 +44,18 @@ html.w-editor .main-wrapper {
 .frontrunner--embed fieldset {
   max-width: none !important;
 }
+
+.frontrunner--embed .hs-button.primary.large {
+  height: 64rem;
+  padding: 24rem;
+  color: #000;
+  text-align: center;
+  font-size: 24rem;
+  font-style: normal;
+  font-weight: 450;
+  line-height: 82%; /* 19.68px */
+}
+
 #ot-sdk-btn-floating.ot-floating-button {
   position: relative !important;
   top: -70em;
