--- a/event/beyond.css
+++ b/event/beyond.css
@@ -46,7 +46,7 @@ html.w-editor .main-wrapper {
 }
 
 .frontrunner--embed .hs-button.primary.large {
-  padding: 24rem;
+  padding: 24rem 40rem;
   color: #000;
   text-align: center;
   font-size: 24rem;
