--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
 .main-wrapper {
-    opacity: 0;
-  }
-  
-  .overflow-hidden {
-    overflow: hidden;
-  }
-  
-  .loading-animation-split {
-    line-height: 1.1;
-  }
-  
+  opacity: 0;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.loading-animation-split {
+  line-height: 1.1;
+}
+
+.overflow-hidden:nth-child(n + 1) {
+  margin-top: -30rem;
+}
+
+@media (max-width: 991px) {
   .overflow-hidden:nth-child(n + 1) {
-    margin-top: -30rem;
+    margin-top: -10rem;
   }
-  
-  @media (max-width: 991px) {
-    .overflow-hidden:nth-child(n + 1) {
-      margin-top: -10rem;
-    }
-  
-    .navbar--dropdown-list {
-      height: 0px;
-    }
+
+  .navbar--dropdown-list {
+    height: 0px;
   }
-  
+}
+
+.player--video-container:hover .player--video-controls {
+  opacity: 1;
+}
+
+.player--playPause {
+  display: none; /* Hide the playPause button initially */
+}
+
+.player--playPause.is-visible {
+  display: block; /* This class will make the playPause button visible */
+}
