--- a/page/social-selling.css
+++ b/page/social-selling.css
@@ -16,6 +16,11 @@
   opacity: 0;
 }
 
+.body.slide-1 .is--step1 {
+  height: 28rem;
+  background-color: #6b00de;
+}
+
 .body.slide-2 .is--video1 {
   opacity: 0;
   transform: translate(0px, -40rem);
@@ -32,6 +37,11 @@
 
 .body.slide-2 .is--video4 {
   opacity: 0;
+}
+
+.body.slide-2 .is--step2 {
+  height: 28rem;
+  background-color: #6b00de;
 }
 
 .body.slide-3 .is--video1 {
@@ -52,6 +62,11 @@
   opacity: 0;
 }
 
+.body.slide-3 .is--step3 {
+  height: 28rem;
+  background-color: #6b00de;
+}
+
 .body.slide-4 .is--video1 {
   opacity: 0;
 }
@@ -68,4 +83,9 @@
 .body.slide-4 .is--video4 {
   opacity: 1;
   transform: translate(0px, -40rem);
+}
+
+.body.slide-4 .is--step4 {
+  height: 28rem;
+  background-color: #6b00de;
 }
