--- a/event/beyond.css
+++ b/event/beyond.css
@@ -46,7 +46,10 @@ html.w-editor .main-wrapper {
 }
 
 .frontrunner--embed .form-columns-2 {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 24rem;
+  row-gap: 24rem;
 }
 
 .frontrunner--embed .hs-button.primary.large {
