--- a/event/beyond.css
+++ b/event/beyond.css
@@ -62,6 +62,7 @@ html.w-editor .main-wrapper {
   line-height: 82%; /* 19.68px */
   border-radius: 300rem;
   border-width: 0px;
+  -webkit-appearance: none;
 }
 
 .frontrunner--embed .hs-form-field {
