--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -56,3 +56,17 @@
   border-width: 0px;
   text-transform: none;
 }
+
+.submitted-message {
+  margin-bottom: 0;
+  font-family: Neue Haas Grotesk text, Arial, sans-serif;
+  font-size: 16rem;
+  line-height: 1.3 !important;
+}
+
+.submitted-message strong {
+  font-size: 32rem;
+  letter-spacing: -0.03em;
+  font-family: Neue Haas Grotesk Display, Arial, sans-serif;
+  line-height: 96%;
+}
