--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@
 .player--playPause.is-visible {
   display: block; /* Display when .is-visible class is added */
 }
+
+/* widget */
+
+#one-to-one-initiation.avatar-fade-in,
+#one-to-one-initiation.video-fade-in {
+  left: 40rem !important;
+  bottom: 40rem !important;
+}
+
+@media screen and (max-width: 991px) {
+  #one-to-one-initiation.avatar-fade-in,
+  #one-to-one-initiation.video-fade-in {
+    left: 20rem !important;
+    bottom: 20rem !important;
+  }
+}
