--- a/style.css
+++ b/style.css
@@ -58,3 +58,20 @@
     bottom: 20rem !important;
   }
 }
+
+.is--marquee-scrolling {
+  white-space: nowrap;
+  will-change: transform;
+  animation-name: is--marquee-scrolling;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes is--marquee-scrolling {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-1 * var(--scroll-width)));
+  }
+}
