--- a/style.css
+++ b/style.css
@@ -1,56 +1,40 @@
 .main-wrapper {
   opacity: 0;
 }
-
 .overflow-hidden {
   overflow: hidden;
 }
-
 .splide__track {
   overflow: visible;
 }
-
 .loading-animation-split {
   line-height: 1.1;
 }
-
-/* Combining media query rules for .overflow-hidden */
 .overflow-hidden:nth-child(n + 1) {
   margin-top: -30rem;
 }
-
 @media (max-width: 991px) {
   .overflow-hidden:nth-child(n + 1) {
     margin-top: -10rem;
   }
-
   .navbar--dropdown-list {
     height: 0;
   }
 }
-
-/* Simplified hover state for video player controls */
 .player--video-container:hover .player--video-controls {
   opacity: 1;
 }
-
-/* Consolidated styles for player--playPause */
 .player--playpause {
-  display: none; /* Hide the playPause button initially */
+  display: none;
 }
-
 .player--playpause.is-visible {
-  display: block; /* This class will make the playPause button visible */
+  display: block;
 }
-
-/* widget */
-
 #one-to-one-initiation.avatar-fade-in,
 #one-to-one-initiation.video-fade-in {
   right: 40rem !important;
   bottom: 40rem !important;
 }
-
 @media screen and (max-width: 991px) {
   #one-to-one-initiation.avatar-fade-in,
   #one-to-one-initiation.video-fade-in {
@@ -58,7 +42,6 @@
     bottom: 20rem !important;
   }
 }
-
 .is--marquee-scrolling {
   white-space: nowrap;
   will-change: transform;
@@ -66,7 +49,6 @@
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
-
 @keyframes is--marqueescrolling {
   from {
     transform: translateX(0);
