--- a/style.css
+++ b/style.css
@@ -1,59 +1,1 @@
-.main-wrapper {
-  opacity: 0;
-}
-.overflow-hidden {
-  overflow: hidden;
-}
-.splide__track {
-  overflow: visible;
-}
-.loading-animation-split {
-  line-height: 1.1;
-}
-.overflow-hidden:nth-child(n + 1) {
-  margin-top: -30rem;
-}
-@media (max-width: 991px) {
-  .overflow-hidden:nth-child(n + 1) {
-    margin-top: -10rem;
-  }
-  .navbar--dropdown-list {
-    height: 0;
-  }
-}
-.player--video-container:hover .player--video-controls {
-  opacity: 1;
-}
-.player--playpause {
-  display: none;
-}
-.player--playpause.is-visible {
-  display: block;
-}
-#one-to-one-initiation.avatar-fade-in,
-#one-to-one-initiation.video-fade-in {
-  right: 40rem !important;
-  bottom: 40rem !important;
-}
-@media screen and (max-width: 991px) {
-  #one-to-one-initiation.avatar-fade-in,
-  #one-to-one-initiation.video-fade-in {
-    right: 20rem !important;
-    bottom: 20rem !important;
-  }
-}
-.is--marquee-scrolling {
-  white-space: nowrap;
-  will-change: transform;
-  animation-name: is--marqueescrolling;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-@keyframes is--marqueescrolling {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(calc(-1 * var(--scroll-width)));
-  }
-}
+.main-wrapper{opacity:0}.overflow-hidden{overflow:hidden}.splide__track{overflow:visible}.loading-animation-split{line-height:1.1}.overflow-hidden:nth-child(n+1){margin-top:-30rem}@media (max-width:991px){.overflow-hidden:nth-child(n+1){margin-top:-10rem}.navbar--dropdown-list{height:0}}.player--video-container:hover .player--video-controls{opacity:1}.player--playpause{display:none}.player--playpause.is-visible{display:block}#one-to-one-initiation.avatar-fade-in,#one-to-one-initiation.video-fade-in{right:40rem!important;bottom:40rem!important}@media screen and (max-width:991px){#one-to-one-initiation.avatar-fade-in,#one-to-one-initiation.video-fade-in{right:20rem!important;bottom:20rem!important}}.is--marquee-scrolling{white-space:nowrap;will-change:transform;animation-name:is--marqueescrolling;animation-timing-function:linear;animation-iteration-count:infinite}@keyframes is--marqueescrolling{from{transform:translateX(0)}to{transform:translateX(calc(-1 * var(--scroll-width)))}}
