--- a/webinar/beauty.css
+++ b/webinar/beauty.css
@@ -1,79 +1,1 @@
-/* newseltter footer settings */
-.is--hubspot-form a {
-  color: white;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.is--hubspot-form {
-  color: white;
-}
-
-.is--hubspot-form .hs-input {
-  background-color: transparent;
-  border-radius: 0px;
-  border-top-style: none;
-  border-left-style: none;
-  border-right-style: none;
-  font-size: 14em;
-  width: 100%;
-  margin-bottom: calc(16em / 14);
-  height: 3.4285714285714284em;
-}
-
-.is--hubspot-form label {
-  position: static;
-  left: 16px;
-  top: 1.1428571428571428em;
-  font-family: Neue Haas Grotesk text;
-  color: #747474;
-  font-size: 12em;
-  line-height: 1.2857142857142858;
-  font-weight: 500;
-  text-transform: none;
-  margin-bottom: calc(4em / 12);
-}
-
-.is--hubspot-form p {
-  font-size: 12rem;
-  background-color: transparent !important;
-  color: black;
-  text-align: center;
-}
-
-.is--hubspot-form ul {
-  font-size: calc(12em / 16);
-  padding-left: 0px;
-  margin-bottom: 0px;
-}
-
-.is--hubspot-form .hs-error-msg {
-  font-size: 14em;
-  color: #e12147;
-  margin-top: calc(-12em / 14);
-  font-weight: 400 !important;
-}
-
-.is--hubspot-form .submitted-message {
-  font-size: 2em;
-}
-
-.is--hubspot-form .hs-button.primary.large {
-  position: static;
-  font-size: 16em;
-  padding-right: 0em;
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-  width: 100%;
-  border-width: 1px;
-  border-color: black;
-  border-style: solid;
-  border-radius: 200rem;
-  background-color: transparent !important;
-  color: #2a2a2a;
-}
-
-.is--hubspot-form .hs-button.primary.large:hover {
-  background-color: #2a2a2a !important;
-  color: white;
-}
+.is--hubspot-form a{color:#fff;font-weight:700;text-decoration:none}.is--hubspot-form{color:#fff}.is--hubspot-form .hs-input{background-color:transparent;border-radius:0;border-top-style:none;border-left-style:none;border-right-style:none;font-size:14em;width:100%;margin-bottom:calc(16em / 14);height:3.4285714285714284em}.is--hubspot-form label{position:static;left:16px;top:1.1428571428571428em;font-family:Neue Haas Grotesk text;color:#747474;font-size:12em;line-height:1.2857142857142858;font-weight:500;text-transform:none;margin-bottom:calc(4em / 12)}.is--hubspot-form p{font-size:12rem;background-color:transparent!important;color:#000;text-align:center}.is--hubspot-form ul{font-size:calc(12em / 16);padding-left:0;margin-bottom:0}.is--hubspot-form .hs-error-msg{font-size:14em;color:#e12147;margin-top:calc(-12em / 14);font-weight:400!important}.is--hubspot-form .submitted-message{font-size:2em}.is--hubspot-form .hs-button.primary.large{position:static;font-size:16em;padding-right:0;padding-top:10rem;padding-bottom:10rem;width:100%;border:1px solid #000;border-radius:200rem;background-color:transparent!important;color:#2a2a2a}.is--hubspot-form .hs-button.primary.large:hover{background-color:#2a2a2a!important;color:#fff}
