--- a/article/introducing-social-selling.css
+++ b/article/introducing-social-selling.css
@@ -1,11 +1,1 @@
-.article-richtext h2 {
-  font-size: 28rem;
-  margin-bottom: 16rem;
-  line-height: 1.2;
-}
-
-@media screen and (max-width: 991px) {
-  .article-richtext h2 {
-    font-size: 20rem;
-  }
-}
+.article-richtext h2{font-size:28rem;margin-bottom:16rem;line-height:1.2}@media screen and (max-width:991px){.article-richtext h2{font-size:20rem}}
