--- a/input-field.css
+++ b/input-field.css
@@ -1,194 +1,1 @@
-.active-field,
-.hs-input:focus + label,
-.label_field.focus,
-input:focus + label,
-textarea:focus + label {
-  top: 1.25em;
-  font-size: 8em;
-}
-.hs-button,
-.hs-input {
-  font-family: "Neue Haas Grotesk Display", sans-serif;
-}
-.hs-button.primary.large,
-.hs-input {
-  border-style: solid;
-  border-width: 1px;
-}
-.hs-button.primary.large,
-.hs-form label,
-.hs-input {
-  transition-property: all;
-  transition-timing-function: ease;
-  font-weight: 500;
-}
-.hs-input:focus,
-.input_field:focus {
-  outline: 1px !important;
-}
-input:valid + label {
-  top: 1.25em;
-  font-size: 8em;
-}
-textarea:valid + label {
-  top: 1.25em;
-  font-size: 8em;
-}
-.label_field {
-  pointer-events: none;
-}
-.hs-input {
-  width: 100% !important;
-  height: 3.4285714285714284em;
-  margin-bottom: 0;
-  padding: 0.7142857142857143em 1.1428571428571428em 0.7142857142857143em 16px;
-  border-top-color: @swatch_a5e9b737;
-  border-right-color: @swatch_a5e9b737;
-  border-bottom-color: @swatch_a5e9b737;
-  border-left-color: @swatch_a5e9b737;
-  border-radius: 4px;
-  line-height: 1.4285714285714286;
-  transition-duration: 0.2s;
-  font-size: 14em;
-  margin-bottom: calc(16em / 14);
-}
-.hs-input:main_focus {
-  border-color: #000;
-  font-weight: 500;
-}
-.hs-input:main_active {
-  border-color: #000;
-}
-.hs-form label {
-  position: static;
-  left: 16px;
-  top: 1.1428571428571428em;
-  transition-duration: 0.2s;
-  font-family: Neue Haas Grotesk text;
-  color: #747474;
-  font-size: 12em;
-  line-height: 1.2857142857142858;
-  text-transform: none;
-  margin-bottom: calc(4em / 12);
-}
-.hs-error-msg {
-  font-size: 14em !important;
-  position: static !important;
-  color: #e12147 !important;
-  font-weight: 400 !important;
-  margin-top: calc(-12em / 14);
-}
-.hs-form-field ul {
-  font-size: calc(12em / 16);
-  padding-left: 0;
-  margin-bottom: 0;
-}
-.hs-form-field li {
-  font-size: 1em;
-  margin-bottom: 16em;
-}
-.hs-richtext p {
-  font-size: 12em;
-  color: #747474;
-  line-height: calc(16 / 12);
-  margin-bottom: calc(16em / 12);
-}
-.hs-richtext a {
-  color: #000;
-  font-weight: 700;
-  text-decoration: none;
-}
-.hs-button.primary.large {
-  padding: 0.6666666666666666em 1.3333333333333333em;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border-top-color: @swatch_066e0506;
-  border-right-color: @swatch_066e0506;
-  border-bottom-color: @swatch_066e0506;
-  border-left-color: @swatch_066e0506;
-  border-radius: 0.3333333333333333em;
-  background-color: @swatch_066e0506;
-  transition-duration: 0.3s;
-  color: @swatch_8679021e;
-  font-size: 12em;
-  line-height: 2;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  cursor: pointer;
-  background-color: #2a2a2a;
-}
-.hs-button.primary.large:main_hover {
-  border-top-color: @swatch_3ed7a2dc;
-  border-right-color: @swatch_3ed7a2dc;
-  border-bottom-color: @swatch_3ed7a2dc;
-  border-left-color: @swatch_3ed7a2dc;
-  background-color: @swatch_3ed7a2dc;
-  text-decoration: none;
-}
-.hs-button.primary.large:main_active {
-  background-color: @swatch_3ed7a2dc;
-}
-.hs_error_rollup ul {
-  font-size: 12em;
-  padding-left: 0;
-  margin-bottom: 0;
-}
-.hs_error_rollup li {
-  font-size: 1em;
-  margin-bottom: calc(16em / 12);
-}
-.hs_error_rollup li::marker {
-  font-size: 0em;
-}
-.hs_error_rollup label {
-  font-size: 1em;
-  padding-left: 0;
-  margin-bottom: 0;
-  color: #e12147 !important;
-}
-label .hs-input {
-  font-size: 1em;
-  width: auto;
-  margin-bottom: 0;
-  margin-right: 0.5em;
-  height: auto;
-}
-.hs-fieldtype-intl-phone.hs-input .hs-input,
-.hs-form-checkbox label {
-  font-size: 1em;
-}
-.hs-form-checkbox-display {
-  display: flex;
-  align-items: center;
-}
-.input ul {
-  font-size: 12em;
-  margin-top: 2em;
-}
-.input li {
-  margin-bottom: 1em;
-  margin-top: 1em;
-}
-li::marker {
-  font-size: 0px;
-}
-.hs_what_type_of_customers_.hs-what_type_of_customers_.hs-fieldtype-checkbox.field.hs-form-field {
-  font-size: calc(14em / 12);
-}
-select.hs-input {
-  background-image: url(https://uploads-ssl.webflow.com/5de0e7623719a14060d5e857/60dc6ea4df79dbdc6cd73057_Icon.svg);
-  background-size: calc(24em / 14);
-  background-position-x: 97%;
-  background-position-y: center;
-  background-repeat: no-repeat;
-  -webkit-appearance: none;
-}
-.hs-form-checkbox-display input {
-  width: auto !important;
-}
-.submitted-message {
-  font-size: 16em;
-}
+.active-field,.hs-input:focus+label,.label_field.focus,input:focus+label,textarea:focus+label{top:1.25em;font-size:8em}.hs-button,.hs-input{font-family:"Neue Haas Grotesk Display",sans-serif}.hs-button.primary.large,.hs-input{border-style:solid;border-width:1px}.hs-button.primary.large,.hs-form label,.hs-input{transition-property:all;transition-timing-function:ease;font-weight:500}.hs-input:focus,.input_field:focus{outline:1px!important}input:valid+label{top:1.25em;font-size:8em}textarea:valid+label{top:1.25em;font-size:8em}.label_field{pointer-events:none}.hs-input{width:100%!important;height:3.4285714285714284em;margin-bottom:0;padding:.7142857142857143em 1.1428571428571428em .7142857142857143em 16px;border-top-color:@swatch_a5e9b737;border-right-color:@swatch_a5e9b737;border-bottom-color:@swatch_a5e9b737;border-left-color:@swatch_a5e9b737;border-radius:4px;line-height:1.4285714285714286;transition-duration:.2s;font-size:14em;margin-bottom:calc(16em / 14)}.hs-input:main_focus{border-color:#000;font-weight:500}.hs-input:main_active{border-color:#000}.hs-form label{position:static;left:16px;top:1.1428571428571428em;transition-duration:.2s;font-family:Neue Haas Grotesk text;color:#747474;font-size:12em;line-height:1.2857142857142858;text-transform:none;margin-bottom:calc(4em / 12)}.hs-error-msg{font-size:14em!important;position:static!important;color:#e12147!important;font-weight:400!important;margin-top:calc(-12em / 14)}.hs-form-field ul{font-size:calc(12em / 16);padding-left:0;margin-bottom:0}.hs-form-field li{font-size:1em;margin-bottom:16em}.hs-richtext p{font-size:12em;color:#747474;line-height:calc(16 / 12);margin-bottom:calc(16em / 12)}.hs-richtext a{color:#000;font-weight:700;text-decoration:none}.hs-button.primary.large{padding:.6666666666666666em 1.3333333333333333em;flex-direction:row;justify-content:center;align-items:center;border-top-color:@swatch_066e0506;border-right-color:@swatch_066e0506;border-bottom-color:@swatch_066e0506;border-left-color:@swatch_066e0506;border-radius:.3333333333333333em;background-color:@swatch_066e0506;transition-duration:.3s;color:@swatch_8679021e;font-size:12em;line-height:2;color:#fff;text-align:center;text-decoration:none;text-transform:uppercase;cursor:pointer;background-color:#2a2a2a}.hs-button.primary.large:main_hover{border-top-color:@swatch_3ed7a2dc;border-right-color:@swatch_3ed7a2dc;border-bottom-color:@swatch_3ed7a2dc;border-left-color:@swatch_3ed7a2dc;background-color:@swatch_3ed7a2dc;text-decoration:none}.hs-button.primary.large:main_active{background-color:@swatch_3ed7a2dc}.hs_error_rollup ul{font-size:12em;padding-left:0;margin-bottom:0}.hs_error_rollup li{font-size:1em;margin-bottom:calc(16em / 12)}.hs_error_rollup li::marker{font-size:0em}.hs_error_rollup label{font-size:1em;padding-left:0;margin-bottom:0;color:#e12147!important}label .hs-input{font-size:1em;width:auto;margin-bottom:0;margin-right:.5em;height:auto}.hs-fieldtype-intl-phone.hs-input .hs-input,.hs-form-checkbox label{font-size:1em}.hs-form-checkbox-display{display:flex;align-items:center}.input ul{font-size:12em;margin-top:2em}.input li{margin-bottom:1em;margin-top:1em}li::marker{font-size:0px}.hs_what_type_of_customers_.hs-what_type_of_customers_.hs-fieldtype-checkbox.field.hs-form-field{font-size:calc(14em / 12)}select.hs-input{background-image:url(https://uploads-ssl.webflow.com/5de0e7623719a14060d5e857/60dc6ea4df79dbdc6cd73057_Icon.svg);background-size:calc(24em / 14);background-position-x:97%;background-position-y:center;background-repeat:no-repeat;-webkit-appearance:none}.hs-form-checkbox-display input{width:auto!important}.submitted-message{font-size:16em}
