--- a/page/bookdemo.css
+++ b/page/bookdemo.css
@@ -1,84 +1,1 @@
-.is--demo-hero .hs-form label {
-  color: #000;
-  font-size: 14rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
-  margin-bottom: 11rem;
-}
-
-.is--demo-hero .hs-input {
-  height: 48rem;
-  padding: 4rem 16rem;
-  border-radius: 8rem;
-  border: 1px solid #999;
-  background: #f6f8fa;
-  margin-bottom: 11rem;
-  font-size: 14rem;
-  line-height: 140%;
-  font-weight: 400;
-  font-style: normal;
-  color: #000;
-}
-
-.is--demo-hero .hs-richtext {
-  margin-bottom: 36rem;
-}
-
-.is--demo-hero .hs-richtext p {
-  color: #000;
-  font-size: 12rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
-}
-
-.is--demo-hero .hs-richtext a {
-  font-weight: 400;
-  text-decoration: underline;
-}
-
-.is--demo-hero .hs-button.primary.large {
-  display: flex;
-  padding: 13rem 26rem;
-  width: 100%;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 10rem;
-  border-radius: 58rem;
-  background: #6b00de;
-  color: #fff;
-  text-align: center;
-  font-size: 15rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 170%; /* 171.429% */
-  border-width: 0px;
-  text-transform: none;
-}
-
-.submitted-message {
-  margin-bottom: 0;
-  font-family: Neue Haas Grotesk text, Arial, sans-serif;
-  font-size: 16rem;
-  line-height: 1.3 !important;
-}
-
-.submitted-message strong {
-  font-size: 32rem;
-  letter-spacing: -0.03em;
-  font-family: Neue Haas Grotesk Display, Arial, sans-serif;
-  line-height: 96%;
-}
-
-.heading--16 {
-  letter-spacing: -0.02em !important;
-  margin-bottom: 0 !important;
-  font-family: Neue Haas Grotesk text, Arial, sans-serif;
-  font-size: 16rem !important;
-  font-weight: 500 !important;
-  line-height: 1.1 !important;
-}
-.is--20margin-bottom {
-  margin-bottom: 20rem !important;
-}
+.is--demo-hero .hs-form label,.is--demo-hero .hs-input{margin-bottom:11rem;font-size:14rem}.is--demo-hero .hs-form label,.is--demo-hero .hs-input,.is--demo-hero .hs-richtext p{color:#000;line-height:140%;font-weight:400;font-style:normal}.heading--16,.submitted-message{font-family:Neue Haas Grotesk text,Arial,sans-serif}.is--demo-hero .hs-input{height:48rem;padding:4rem 16rem;border-radius:8rem;border:1px solid #999;background:#f6f8fa}.is--demo-hero .hs-richtext{margin-bottom:36rem}.is--demo-hero .hs-richtext p{font-size:12rem}.is--demo-hero .hs-richtext a{font-weight:400;text-decoration:underline}.is--demo-hero .hs-button.primary.large{display:flex;padding:13rem 26rem;width:100%;justify-content:center;align-items:flex-start;gap:10rem;border-radius:58rem;background:#6b00de;color:#fff;text-align:center;font-size:15rem;font-style:normal;font-weight:500;line-height:170%;border-width:0;text-transform:none}.submitted-message{margin-bottom:0;font-size:16rem;line-height:1.3!important}.submitted-message strong{font-size:32rem;letter-spacing:-.03em;font-family:Neue Haas Grotesk Display,Arial,sans-serif;line-height:96%}.heading--16{letter-spacing:-.02em!important;margin-bottom:0!important;font-size:16rem!important;font-weight:500!important;line-height:1.1!important}.is--20margin-bottom{margin-bottom:20rem!important}
