--- a/page/social-selling.css
+++ b/page/social-selling.css
@@ -1,91 +1,1 @@
-.body.slide-1 .is--video1 {
-  opacity: 1;
-  transform: translate(0px, 0rem);
-}
-
-.body.slide-1 .is--video2 {
-  opacity: 0;
-  transform: translate(0px, 40rem);
-}
-
-.body.slide-1 .is--video3 {
-  opacity: 0;
-}
-
-.body.slide-1 .is--video4 {
-  opacity: 0;
-}
-
-.body.slide-1 .is--step1 {
-  height: 28rem;
-  background-color: #6b00de;
-}
-
-.body.slide-2 .is--video1 {
-  opacity: 0;
-  transform: translate(0px, -40rem);
-}
-
-.body.slide-2 .is--video2 {
-  opacity: 1;
-  transform: translate(0px, 0rem);
-}
-
-.body.slide-2 .is--video3 {
-  opacity: 0;
-}
-
-.body.slide-2 .is--video4 {
-  opacity: 0;
-}
-
-.body.slide-2 .is--step2 {
-  height: 28rem;
-  background-color: #6b00de;
-}
-
-.body.slide-3 .is--video1 {
-  opacity: 0;
-}
-
-.body.slide-3 .is--video2 {
-  opacity: 0;
-  transform: translate(0px, -40rem);
-}
-
-.body.slide-3 .is--video3 {
-  opacity: 1;
-  transform: translate(0px, 0rem);
-}
-
-.body.slide-3 .is--video4 {
-  opacity: 0;
-}
-
-.body.slide-3 .is--step3 {
-  height: 28rem;
-  background-color: #6b00de;
-}
-
-.body.slide-4 .is--video1 {
-  opacity: 0;
-}
-
-.body.slide-4 .is--video2 {
-  opacity: 0;
-}
-
-.body.slide-4 .is--video3 {
-  opacity: 0;
-  transform: translate(0px, -40rem);
-}
-
-.body.slide-4 .is--video4 {
-  opacity: 1;
-  transform: translate(0px, -40rem);
-}
-
-.body.slide-4 .is--step4 {
-  height: 28rem;
-  background-color: #6b00de;
-}
+.body.slide-1 .is--step1,.body.slide-2 .is--step2,.body.slide-3 .is--step3,.body.slide-4 .is--step4{height:28rem;background-color:#6b00de}.body.slide-1 .is--video1{opacity:1;transform:translate(0,0)}.body.slide-1 .is--video2{opacity:0;transform:translate(0,40rem)}.body.slide-1 .is--video3,.body.slide-1 .is--video4{opacity:0}.body.slide-2 .is--video1{opacity:0;transform:translate(0,-40rem)}.body.slide-2 .is--video2{opacity:1;transform:translate(0,0)}.body.slide-2 .is--video3,.body.slide-2 .is--video4,.body.slide-3 .is--video1{opacity:0}.body.slide-3 .is--video2{opacity:0;transform:translate(0,-40rem)}.body.slide-3 .is--video3{opacity:1;transform:translate(0,0)}.body.slide-3 .is--video4,.body.slide-4 .is--video1,.body.slide-4 .is--video2{opacity:0}.body.slide-4 .is--video3{opacity:0;transform:translate(0,-40rem)}.body.slide-4 .is--video4{opacity:1;transform:translate(0,-40rem)}
