--- a/forecast.css
+++ b/forecast.css
@@ -34,6 +34,7 @@
 #one-to-one-initiation.video-fade-in {
   right: 40rem !important;
   bottom: 40rem !important;
+  display: none !important;
 }
 
 @media screen and (max-width: 991px) {
