--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -89,6 +89,15 @@ html.w-editor .main-wrapper {
   -webkit-appearance: none;
 }
 
+.hs-input[type="checkbox"] {
+  width: 24rem;
+  height: 24rem;
+}
+
+.hs-form-checkbox-display {
+  display: flex;
+}
+
 .frontrunner--embed fieldset {
   max-width: none;
 }
