--- a/event/frontrunner.css
+++ b/event/frontrunner.css
@@ -90,7 +90,7 @@ html.w-editor .main-wrapper {
 }
 
 .hs-input[type="checkbox"] {
-  width: 16em !important;
+  width: 16rem !important;
   height: 16rem !important;
 }
 
